# lvoice

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: audio.py  config.py  deps.py  main.py  schemas.py
app/engines/: base.py  cosyvoice.py
app/routers/: health.py  tts.py  voices.py
app/static/: index.html
tests/: test_health.py  test_tts.py
